// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headroom should render correct if state is pinned, transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroomstyles__HeaderWrapper
    static={false}
    top={0}
    transition={true}
    translateY={0}
  >
    <div
      className="Headroomstyles__HeaderWrapper-jYoiGy kNRfRu"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroomstyles__HeaderWrapper>
  <MockAncestor
    stickyTop={100}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is static, no transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroomstyles__HeaderWrapper
    static={true}
    top={-50}
    transition={false}
    translateY={0}
  >
    <div
      className="Headroomstyles__HeaderWrapper-jYoiGy gUuBwh"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroomstyles__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is unpinned, no transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroomstyles__HeaderWrapper
    static={false}
    top={0}
    transition={false}
    translateY={-50}
  >
    <div
      className="Headroomstyles__HeaderWrapper-jYoiGy cxGhof"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroomstyles__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is unpinned, transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroomstyles__HeaderWrapper
    static={false}
    top={0}
    transition={true}
    translateY={-50}
  >
    <div
      className="Headroomstyles__HeaderWrapper-jYoiGy icihRv"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroomstyles__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render with no stickyAncestor supplied 1`] = `
<React.Fragment>
  <Headroomstyles__HeaderWrapper
    static={true}
    top={-50}
    transition={false}
    translateY={0}
  >
    <MockNode />
  </Headroomstyles__HeaderWrapper>
</React.Fragment>
`;

exports[`Headroom should render with values from its state 1`] = `
<Headroom
  height={100}
  pinStart={0}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroomstyles__HeaderWrapper
    static={true}
    top={-50}
    transition={false}
    translateY={0}
  >
    <div
      className="Headroomstyles__HeaderWrapper-jYoiGy gUuBwh"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroomstyles__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;
